// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`price-beth successful calls return success when fetching the USD/BEth price 1`] = `
Object {
  "data": Object {
    "result": 4430.014752502817,
  },
  "jobRunID": "1",
  "result": 4430.014752502817,
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the BTC/BEth price 1`] = `
Object {
  "data": Object {
    "result": 0.07826051571393168,
  },
  "jobRunID": "1",
  "result": 0.07826051571393168,
  "statusCode": 200,
}
`;

exports[`price-beth successful calls returns success when fetching the ETH/BEth price 1`] = `
Object {
  "data": Object {
    "result": 0.9828489551447018,
  },
  "jobRunID": "1",
  "result": 0.9828489551447018,
  "statusCode": 200,
}
`;
